web-interface/src/index.css
body {
    font-family: 'Inconsolata', monospace;
    color: #fff;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Share Tech Mono', monospace;
    text-transform: uppercase;
}

h1 {
    text-align: center;
    border-bottom: 1px solid #191b28;
    border-top: 1px solid #191b28;
    padding-bottom: 5px;
    padding-top: 10px;
    margin-bottom: 20px;
}

header {
    background-color: #191b28;
    margin-bottom: 11px;
}

hr {
    background-color: #444
}

div.overview-statistic p {
    font-weight: 600;
}

div.overview-statistic span {
    font-size: 26px;
}

.navbar img.logo {
    height: 30px;
    margin-right: 15px;
}

a.navbar-brand {
    color: #fff;
    font-weight: 500 !important;
}

a.navbar-brand:hover {
    color: #fff;
}

a:hover {
    text-decoration: none;
    color: #0b5573;
}

h2 em {
    color: #999;
    font-style: normal;
}

#footer a {
    color: #0a4862;
}

#footer a:hover {
    text-decoration: none;
    color: #0b5573;
}

li.state-not-active {
    text-decoration: line-through;
    color: #999;
}

